update proper contact

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=RemoteMe
 version=1.0.0
-author=Remoteme.org <remoteme.org@gmail.com>
-maintainer=Remoteme.org <remoteme.org@gmail.com>
+author=Remoteme.org <contact@remoteme.org>
+maintainer=Remoteme.org <contact@remoteme.org>
 sentence=Libraries for RemoteMe.org system
 paragraph=Libraries will allows You to communicate Your arduino with RemoteMe.org system
 category=Communication
