--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,9 @@
 name=RemoteMe
-version=1.0.0
-author=Remoteme.org <contact@remoteme.org>
+version=1.0.6
+author=Remoteme.org
 maintainer=Remoteme.org <contact@remoteme.org>
 sentence=Libraries for RemoteMe.org system
 paragraph=Libraries will allows You to communicate Your arduino with RemoteMe.org system
 category=Communication
 url=https://github.com/remoteme/arduinoLibrary
 architectures=*
-dot_a_linkage=false
-includes=RemoteMe.h,RemoteMeMessagesUtils.h
