--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Libraries will allows You to communicate Your arduino with RemoteMe.or
 category=Communication
 url=https://github.com/remoteme/arduinoLibrary
 architectures=*
+includes=RemoteMe.h
